--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -59,7 +59,7 @@
 	
 	% Hyperref
 	\usepackage[
-	pdfauthor={Laura Anger, Timo \dots, Lukas Kolhagen},
+	pdfauthor={Laura Anger, Timo Breuer, Lukas Kolhagen},
 	pdftitle={BVA Bewegungsanalyse},
 	pdftoolbar=true,	
 	colorlinks=true,
