--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -367,7 +367,7 @@ Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfind
 	\end{figure}
 \end{minipage}\vspace{0.7cm}
 
-Alle erzeugten Bewegungsvektorfelder können auf der beiliegenden Daten-CD eingesehen werden. Die Dateien heißen \textit{bvf-1.tiff}, \textit{bvf-2.tiff} und \textit{bvf-3.tiff}.
+Alle erzeugten Bewegungsvektorfelder können auf der beiliegenden Daten-CD eingesehen werden. Die Dateien heißen \textit{bvf-1.tif}, \textit{bvf-2.tif} und \textit{bvf-3.tif}.
 
 \subsection{Einschwingverhalten} \label{sec:Einschwingverhalten}
 Als Ausgangspunkt werden alle Bewegungsvektorfelder zu Beginn des Algorithmus auf den Nullvektor gesetzt. Das Verfahren muss sich also zunächst Einschwingen. Dabei wird im Folgenden zwischen dem interframe Einschwingen (über mehrere Bilder hinweg) und dem intraframe Einschwingen (innerhalb eines Bildes) unterschieden.
