--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -168,7 +168,7 @@ Da es sich, wie bereits erwähnt, um einen bayesschen Ansatz handelt, gilt es sic
 		
 		\subsection{Kostenfunktion}\label{sec:costFunc}
 			
-Nach Aach und Kunz\textsuperscript{\cite{aach1998bayesian}} lässt sich die unter \ref{sec:verfahren} erwähnte Wahrscheinlichkeitsdichte formulieren als:
+Nach Aach und Kunz\textsuperscript{\cite{aach1998bayesian}} lässt sich die unter \ref{sec:Verfahren} erwähnte Wahrscheinlichkeitsdichte formulieren als:
 
 \begin{equation}
 ce^{-\displaystyle\sum\limits_{\vec{k}}(\frac{\left[d\left(\vec{k},\vec{v}\left(\vec{k}\right)\right)\right]^2}{4\cdot\sigma^2\left(\vec{k}\right)} + \lambda\sum_{\vec{l} \epsilon N(\vec{k})} g_{\vec{l}} \Vert \vec{v}(\vec{k}) - \vec{v}(\vec{l}) \Vert_2^{\nu} + \lambda_T\sum\limits_{\vec{k}}\left|\left|\hat{\vec{V}}_{n-1}\left(\vec{k}\right)-\vec{v}\left(\vec{k}\right)\right|\right|^\nu_2)}
@@ -252,49 +252,49 @@ Das Ergebnis wird für horizontale und vertikale Nachbarregionen mit dem Faktor $
 			\begin{figure}[h!]
 			\centering
 					\begin{psmatrix}[rowsep=0.3,colsep=0.4]
-						\rnode{run}{\psframebox[fillstyle=solid,fillcolor=black]{\footnotesize\color{white}public void run(ImageProcessor ip)}}\\
-						\rnode{readStack}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Read data from stack}}\\
-						\rnode{initialize}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Initialize first motion vector field with zero vectors}}\\
-						\rnode{forI}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize\texttt{$i=0$}}}\\
-						\dianode[fillstyle=solid,fillcolor=red!30]{condStackSize}{\footnotesize$i<$ \texttt{stack size}?}\\[3mm]
-						\dianode[fillstyle=solid,fillcolor=red!30]{frameNotZero}{\footnotesize$i\not=$ \texttt{0}?}\\[3mm]
-						\rnode{curFrame}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Set current frame to i}}\\
-						\rnode{forJ}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize\texttt{$j=0$}}}\\
-						\dianode[fillstyle=solid,fillcolor=red!30]{condIter}{\footnotesize$j<$ \texttt{iterations}?}\\[3mm]
-						\rnode{Vn}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Set current vector field as previous}}\\
-						\rnode{forK}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize\texttt{$k=0$}}}\\
-						\dianode[fillstyle=solid,fillcolor=red!30]{condNumBlocks}{\footnotesize$k<$ \texttt{number of blocks}?}\\[3mm]
-						\rnode{calcAlt}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Calculate 14 alternatives for block k}}\\
-						\rnode{minimizeCost}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Minimize cost function for alternatives}}\\
-						\rnode{addVec}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Add vector with minimal cost to motion vector field}}\\
-						\rnode{updateProgress}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Update plug-in progress}}\\
-						\rnode{genMVF}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Generate motion vector field visualization for current frame}}\\
-						\rnode{addToOutStack}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Add motion vector field to output stack}}\\
-						\rnode{outWindow}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\footnotesize Generate and display output window}}\\
+						\rnode{run}{\psframebox[fillstyle=solid,fillcolor=black]{\color{white}public void run(ImageProcessor ip)}}\\
+						\rnode{readStack}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Read data from stack}}\\
+						\rnode{initialize}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Initialize first motion vector field with zero vectors}}\\
+						\rnode{forI}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\texttt{$i=0$}}}\\
+						\dianode[fillstyle=solid,fillcolor=red!30]{condStackSize}{$i<$ \texttt{stack size}?}\\[3mm]
+						\dianode[fillstyle=solid,fillcolor=red!30]{frameNotZero}{$i\not=$ \texttt{0}?}\\[3mm]
+						\rnode{curFrame}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Set current frame to i}}\\
+						\rnode{forJ}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\texttt{$j=0$}}}\\
+						\dianode[fillstyle=solid,fillcolor=red!30]{condIter}{$j<$ \texttt{iterations}?}\\[3mm]
+						\rnode{Vn}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Set current vector field as previous}}\\
+						\rnode{forK}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{\texttt{$k=0$}}}\\
+						\dianode[fillstyle=solid,fillcolor=red!30]{condNumBlocks}{$k<$ \texttt{number of blocks}?}\\[3mm]
+						\rnode{calcAlt}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Calculate 14 alternatives for block k}}\\
+						\rnode{minimizeCost}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Minimize cost function for alternatives}}\\
+						\rnode{addVec}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Add vector with minimal cost to motion vector field}}\\
+						\rnode{updateProgress}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Update plug-in progress}}\\
+						\rnode{genMVF}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Generate motion vector field visualization for current frame}}\\
+						\rnode{addToOutStack}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Add motion vector field to output stack}}\\
+						\rnode{outWindow}{\psframebox[linearc=0.05,cornersize=absolute,fillstyle=solid,fillcolor=black!10]{Generate and display output window}}\\
 					\end{psmatrix}
 					\psset{arrows=->,nodesep=0pt}
 					\ncline{run}{readStack}
 					\ncline{readStack}{initialize}
 					\ncline{initialize}{forI}
 					\ncline{forI}{condStackSize}
-					\ncline{condStackSize}{frameNotZero}\nbput{\footnotesize\color{green}True}
-					\ncangle[angle=0, linearc=.1]{frameNotZero}{genMVF}\nbput[npos=.15]{\footnotesize\color{red}False}
-					\ncline{frameNotZero}{curFrame}\nbput{\footnotesize\color{green}True}
+					\ncline{condStackSize}{frameNotZero}\nbput{\color{green}True}
+					\ncangle[angle=0, linearc=.1]{frameNotZero}{genMVF}\nbput[npos=.15]{\color{red}False}
+					\ncline{frameNotZero}{curFrame}\nbput{\color{green}True}
 					\ncline{curFrame}{forJ}
 					\ncline{forJ}{condIter}					
-					\ncline{condIter}{Vn}\nbput{\footnotesize\color{green}True}
+					\ncline{condIter}{Vn}\nbput{\color{green}True}
 					\ncline{Vn}{forK}
 					\ncline{forK}{condNumBlocks}
-					\ncline{condNumBlocks}{calcAlt}\nbput{\footnotesize\color{green}True}
+					\ncline{condNumBlocks}{calcAlt}\nbput{\color{green}True}
 					\ncline{calcAlt}{minimizeCost}
 					\ncline{minimizeCost}{addVec}
 					\ncline{addVec}{updateProgress}
-					\ncangle[arm=3cm, angle=180, linearc=.1]{condIter}{updateProgress}\nbput[npos=.25]{\footnotesize\color{red}False}
-					\ncangle[arm=1.8cm, angle=0, linearc=.1]{condNumBlocks}{condIter}\nbput[npos=.25]{\footnotesize\color{red}False}
+					\ncangle[arm=3cm, angle=180, linearc=.1]{condIter}{updateProgress}\nbput[npos=.25]{\color{red}False}
+					\ncangle[arm=1.8cm, angle=0, linearc=.1]{condNumBlocks}{condIter}\nbput[npos=.25]{\color{red}False}
 					\ncline{updateProgress}{genMVF}
 					\ncline{genMVF}{addToOutStack}
 					\ncline{addToOutStack}{outWindow}
-					\ncangle[arm=2.8cm, angle=180, linearc=.1]{condStackSize}{outWindow}\nbput[npos=.2]{\footnotesize\color{red}False}
+					\ncangle[arm=2.8cm, angle=180, linearc=.1]{condStackSize}{outWindow}\nbput[npos=.2]{\color{red}False}
 			\caption{Programmablauf}
 			\label{fig:programmAblauf}
 		\end{figure}
