kleine Änderungen wie besprochen

--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -356,11 +356,11 @@ Im Folgenden wird das Verfahren anhand der in Kapitel \ref{sec:testmaterialien} 
 \begin{itemize} 
 \item[$\bullet$] 5 Iterationen
 \item[$\bullet$] $\nu$ = 1.5
-\item[$\bullet$] $\lambda$ = 0.3 und $\lambda$\textsubscript{T} = 0.3
+\item[$\bullet$] $\lambda$ = 0.001  und $\lambda$\textsubscript{T} = 0.001 
 \end{itemize}
 
-In Abbildung \ref{fig:testmaterial12} sind jeweils drei Bewegungsvektorfelder für Testmaterial 1 und Testmaterial 2 zu sehen. Es ist deutlich erkennbar, dass die Bewegungsdetektion sowohl für hochfrequente, als auch für tieffrequente Bildinhalte funktioniert hat. \\
-Die Abweichungen der berechneten von den tatsächlichen Bewegungsvektoren können bestimmt werden, da die Bewegung bekannt ist. Da sich alle Blöcke eines Bildes mit der selben Geschwindigkeit in die selbe Richtung bewegen, kann die absolute Längenabweichung der einzelnen Vektoren über ein Bild aufsummiert und durch die Anzahl der Blöcke geteilt werden um ein Maß für die absolute Abweichung zu erhalten.\\
+In Abbildung \ref{fig:testmaterial12} sind jeweils drei Bewegungsvektorfelder für Testmaterial 1 und Testmaterial 2 zu sehen. Es ist deutlich erkennbar, dass die Bewegungsdetektion sowohl für hochfrequente, als auch für tieffrequente Bildinhalte funktioniert hat.  Wie aus Kapitel \ref{sec:paraRegula} hervorgeht, ist davon auszugehen, dass mit kleineren Werten für $\lambda$ und $\lambda_{T}$ die Bewegungsvektorfelder schneller konvergieren.  \\
+Die Abweichungen der berechneten von den tatsächlichen Bewegungsvektoren können bestimmt werden, da die Bewegung bekannt ist. Da sich alle Blöcke eines Bildes mit der selben Geschwindigkeit in die selbe Richtung bewegen, kann die Längenabweichung der einzelnen Vektoren über ein Bild aufsummiert und durch die Anzahl der Blöcke geteilt werden um ein Maß für die Abweichung zu erhalten.\\
 Schaut man sich die so ermittelten Abweichungen für ein Bild an, wo in den vorherigen Bildern keine Richtungsänderung  stattgefunden hat, so beträgt diese im Durchschnitt für beide Testmaterialien ungefähr ein halbes Pixel. Da es wie in Kapitel \ref{sec:Einschwingverhalten} näher beschrieben dauert, bis die Bewegungsvektoren eingeschwungen sind, kommt es in den Bildern 50 und 100 in beiden Testmaterialien zu einer Abweichung von bis zu 8 Pixeln. Das sind eben die Bilder, wo sich die Bewegung plötzlich ändert. \\
 
 \begin{figure}[H] 
@@ -373,7 +373,7 @@ Schaut man sich die so ermittelten Abweichungen für ein Bild an, wo in den vorhe
 Da es sich bei Testmaterial 3 um eine reale Videosequenz handelt, deren Bewegungsvektoren unbekannt sind, kann die Auswertung hier nur rein visuell vorgenommen werden.\\
 
 Abbildung \ref{fig:frame43} und Abbildung \ref{fig:frame47} zeigen jeweils ein Standbild aus dem Bewegungsvektorfeld.\\
-Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfindet weitgehend richtig detektiert wurden. Und auch die Bewegungen des Autos und der Radfahrerin werden trotz der Verdeckung durch die Säule weitgehend erkannt. Auffällig ist, dass besonders die Blöcke, die hinter dem Auto liegen und deren Bildinhalt sich nicht mehr bewegt falsch berechnet sind. Das ist besonders gut in Abbildung \ref{fig:frame47} zu sehen und lässt sich auf das Einschwingverhalten zurückführen. Dieses wird in Kapitel \ref{sec:Einschwingverhalten} erklärt und ausgewertet.\\
+Es ist deutlich zu erkennen, dass die Bereiche in denen keine Bewegung stattfindet weitgehend richtig detektiert wurden. Und auch die Bewegungen des Autos und der Radfahrerin werden trotz der Verdeckung durch die Säule weitgehend erkannt. Auffällig ist, dass besonders die Blöcke, die hinter dem Auto liegen und deren Bildinhalt sich nicht mehr bewegt falsch berechnet sind.Hier befindet sich eine Objektgrenze, was vermutlich zu der Fehlberechnung geführt hat. Der Effekt ist besonders gut in Abbildung \ref{fig:frame47} zu sehen.\\
 
 \begin{minipage}{0.5\textwidth}
 	\begin{figure}[H] 
