--- a/ABV_Bewegungsanalyse_LaTeX.tex
+++ b/ABV_Bewegungsanalyse_LaTeX.tex
@@ -356,10 +356,10 @@ Im Folgenden wird das Verfahren anhand der in Kapitel \ref{sec:testmaterialien} 
 \begin{itemize} 
 \item[$\bullet$] 5 Iterationen
 \item[$\bullet$] $\nu$ = 1.5
-\item[$\bullet$] $\lambda$ = 0.001  und $\lambda$\textsubscript{T} = 0.001 
+\item[$\bullet$] $\lambda$ = 0.3  und $\lambda$\textsubscript{T} = 0.3 
 \end{itemize}
 
-In Abbildung \ref{fig:testmaterial12} sind jeweils drei Bewegungsvektorfelder für Testmaterial 1 und Testmaterial 2 zu sehen. Es ist deutlich erkennbar, dass die Bewegungsdetektion sowohl für hochfrequente, als auch für tieffrequente Bildinhalte funktioniert hat.  Wie aus Kapitel \ref{sec:paraRegula} hervorgeht, ist davon auszugehen, dass mit kleineren Werten für $\lambda$ und $\lambda_{T}$ die Bewegungsvektorfelder schneller konvergieren.  \\
+In Abbildung \ref{fig:testmaterial12} sind jeweils drei Bewegungsvektorfelder für Testmaterial 1 und Testmaterial 2 zu sehen. Es ist deutlich erkennbar, dass die Bewegungsdetektion sowohl für hochfrequente, als auch für tieffrequente Bildinhalte funktioniert hat. \\
 Die Abweichungen der berechneten von den tatsächlichen Bewegungsvektoren können bestimmt werden, da die Bewegung bekannt ist. Da sich alle Blöcke eines Bildes mit der selben Geschwindigkeit in die selbe Richtung bewegen, kann die Längenabweichung der einzelnen Vektoren über ein Bild aufsummiert und durch die Anzahl der Blöcke geteilt werden um ein Maß für die Abweichung zu erhalten.\\
 Schaut man sich die so ermittelten Abweichungen für ein Bild an, wo in den vorherigen Bildern keine Richtungsänderung  stattgefunden hat, so beträgt diese im Durchschnitt für beide Testmaterialien ungefähr ein halbes Pixel. Da es wie in Kapitel \ref{sec:Einschwingverhalten} näher beschrieben dauert, bis die Bewegungsvektoren eingeschwungen sind, kommt es in den Bildern 50 und 100 in beiden Testmaterialien zu einer Abweichung von bis zu 8 Pixeln. Das sind eben die Bilder, wo sich die Bewegung plötzlich ändert. \\
 
